labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  This template creates the base VPC resources. Please note that there are a limit of 5 VPC's per region per AWS 
  account. Please refer to https://docs.aws.amazon.com/vpc/latest/userguide/amazon-vpc-limits.html for more 
  information regarding AWS VPC Limits. This template will also create a HTTP proxy in the public VPC for Internet 
  access. This is slightly cheaper than creating a NAT gateway stack.

# Metadata:
#   template metadata

Parameters:
  ProxyServerEc2AmiParam:
    Description: "Refer to https://aws.amazon.com/blogs/compute/query-for-the-latest-amazon-linux-ami-ids-using-aws-systems-manager-parameter-store/"
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  Ec2KeyPairKeyNameParam:
    Type: "AWS::EC2::KeyPair::KeyName"
    Description: "The EC2 Key Pair to allow SSH access to the instances"
  VpcStackNameParam:
    Type: String
    Description: "The name of the VPC stack, in order to import values"
  FirstTrustedInternetCiderParam:
    Type: String
    Description: "CIDR of a host or network from the Internet to trust for incoming traffic to the Public VPC"
    Default: "0.0.0.0/0"

# Rules:
#   set of rules

# Mappings:
#   set of mappings

# Conditions:
#   set of conditions

# Transform:
#   set of transforms

Resources:

#######################################################################################################################
###                                                                                                                 ###
###                                               COMMON EC2 RESOURCES                                              ###
###                                                                                                                 ###
#######################################################################################################################

  TrustedInternetHostsPrefixList:
    Type: AWS::EC2::PrefixList
    Properties: 
      AddressFamily: "IPv4"
      Entries: 
        - Cidr: !Ref FirstTrustedInternetCiderParam
          Description: "A IP address or network from the Internet we trust"
      MaxEntries: 10
      PrefixListName: "TrustedInternetHostsPrefixList"

  InterVpcHostsPrefixList:
    Type: AWS::EC2::PrefixList
    Properties: 
      AddressFamily: "IPv4"
      Entries: 
        - Cidr: 
            Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
          Description: "Public VPC CIDR"
        - Cidr: 
            Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcCidrBlock"
          Description: "Private VPC CIDR"
      MaxEntries: 3
      PrefixListName: "InterVpcHostsPrefixList"

  Ec2InstanceSsmKmsKey:
    Type: AWS::KMS::Key
    Properties: 
      Description: "KMS Key that can be used for traffic encryption when using SSM to connect to EC2 Instances"
      Enabled: true
      EnableKeyRotation: true
      KeyPolicy:
        Version: "2012-10-17"
        Id: "KmsCustomPolicyForEc2Ssm"
        Statement:
          Sid: "Enable IAM policies"
          Effect: "Allow"
          Principal:
            AWS: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
          Action: "kms:*"
          Resource: "*"
      MultiRegion: false
      PendingWindowInDays: 7

  RootRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"

  ProxyServerInstanceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - "sts:AssumeRole"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/AdministratorAccess"
      Path: /
      RoleName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - "ProxyServerInstanceRole"

  Ec2InstanceSsmPolicy:
    Type: AWS::IAM::Policy
    Properties: 
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action:
          - ssm:UpdateInstanceInformation
          - ssmmessages:CreateControlChannel
          - ssmmessages:CreateDataChannel
          - ssmmessages:OpenControlChannel
          - ssmmessages:OpenDataChannel
          Resource: "*"
        - Effect: Allow
          Action:
          - s3:GetEncryptionConfiguration
          Resource: "*"
        - Effect: Allow
          Action:
          - kms:Decrypt
          Resource: !GetAtt Ec2InstanceSsmKmsKey.Arn
      PolicyName: "Ec2InstanceSsmPolicy"
      Roles:
      - !Ref RootRole
      - !Ref ProxyServerInstanceRole

  # SSM Required VPC End Points - this will be required for EC2 instances launched in the Private VPC

  SsmEndPointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "Proxy Server Security Group"
      GroupName: 
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'SsmEndPointSecurityGroup'
      VpcId: 
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"

  SsmEndPointIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: "Allow port 443/tcp (HTTPS)"
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SsmEndPointSecurityGroup
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

  SsmEndPointAllEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties: 
      Description: "Allow all outgoing traffic"
      GroupId: !Ref SsmEndPointSecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  SsmEndPoint1:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PrivateDnsEnabled: true
      SecurityGroupIds: 
        - !Ref SsmEndPointSecurityGroup
      ServiceName: "com.amazonaws.eu-central-1.ssm"
      SubnetIds: 
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3"
      VpcEndpointType: "Interface"
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"


#######################################################################################################################
###                                                                                                                 ###
###                                                 PROXY SERVER                                                    ###
###                                                                                                                 ###
#######################################################################################################################

  ProxyServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "Proxy Server Security Group"
      GroupName: 
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'InstanceSecurityGroup'
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"

  ProxyServerProxyIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: "Allow port 3128/tcp (HTTP_PROXY)"
      FromPort: 3128
      ToPort: 3128
      GroupId: !Ref ProxyServerSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId: !Ref InterVpcHostsPrefixList

  AllEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties: 
      Description: "Allow all outgoing traffic"
      GroupId: !Ref ProxyServerSecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  ProxyServerInstanceIamProfile:
    Type: AWS::IAM::InstanceProfile
    Properties: 
      InstanceProfileName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'ThisInstanceProfile'
      Path: "/"
      Roles: 
        - !Ref ProxyServerInstanceRole

  ProxyServerInstanceHostLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'LaunchTemplate'
      LaunchTemplateData:
        BlockDeviceMappings:
          - Ebs:
              VolumeSize: 8
              VolumeType: gp2
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/sda1
        IamInstanceProfile:
          Arn: !GetAtt ProxyServerInstanceIamProfile.Arn
 
        ImageId: !Ref ProxyServerEc2AmiParam
        InstanceType: t3.large
        KeyName: !Ref Ec2KeyPairKeyNameParam
        SecurityGroupIds:
        - !Ref ProxyServerSecurityGroup
        MetadataOptions:
          HttpTokens: required
        UserData: 
          Fn::Base64:
            Fn::Sub: |
              MIME-Version: 1.0
              Content-Type: multipart/mixed; boundary="==BOUNDARY=="

              --==BOUNDARY==
              Content-Type: text/x-shellscript; charset="us-ascii"

              #!/bin/bash
              yum install -y squid telnet bind-utils nmap-ncat nmap mc python3 python3-pip python3-setuptools git curl vim

              systemctl enable squid.service
              systemctl start squid

              --==BOUNDARY==--

  ProxyServerElbv2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 3128
      HealthCheckProtocol: "HTTP"
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      IpAddressType: "ipv4"
      Matcher: 
        HttpCode: "200-399"
      Name: "ProxyServerElbv2TargetGroup"
      Port: 3128
      Protocol: "HTTP"
      ProtocolVersion: "HTTP2"
      TargetType: "instance"
      UnhealthyThresholdCount: 3
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"

  ProxyServerAutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties: 
      AutoScalingGroupName: !Sub "${AWS::StackName}-ProxyServerASG"
      DesiredCapacity: "1"
      LaunchTemplate: 
        LaunchTemplateId: !Ref ProxyServerInstanceHostLaunchTemplate
        Version: !GetAtt ProxyServerInstanceHostLaunchTemplate.LatestVersionNumber
      MaxSize: "1"
      MinSize: "1"
      NewInstancesProtectedFromScaleIn: false
      VPCZoneIdentifier: 
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3"
      TargetGroupARNs: 
      - !Ref ProxyServerElbv2TargetGroup

  ProxyServerElbv2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "ProxyServerElbv2SecurityGroup"
      GroupDescription: "Enable Proxy Server access on the inbound port for ELB"
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3128
          ToPort: 3128
          SourcePrefixListId: !Ref InterVpcHostsPrefixList
      Tags:
        - Key: Name
          Value: ProxyServerElbv2SecurityGroup

  ProxyServerElbv2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      IpAddressType: "ipv4"
      # LoadBalancerAttributes: 
      # - Key: "load_balancing.cross_zone.enabled"
      #   Value: "true"
      Name: "ProxyServerElbv2"
      Scheme: "internal"
      SecurityGroups: 
      - !Ref ProxyServerElbv2SecurityGroup
      SubnetMappings: 
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1"
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2"
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3"
      Type: "application"
  
  ProxyServerElbv2Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      AlpnPolicy: 
      - "ELBSecurityPolicy-TLS-1-2-Ext-2018-06"
      - "ELBSecurityPolicy-TLS-1-2-2017-01"
      - "ELBSecurityPolicy-TLS13-1-2-2021-06"
      - "ELBSecurityPolicy-TLS13-1-2-Res-2021-06"
      - "ELBSecurityPolicy-TLS13-1-2-Ext1-2021-06"
      - "ELBSecurityPolicy-TLS13-1-2-Ext2-2021-06"
      Certificates: 
      - CertificateArn:
          Fn::ImportValue:
            !Sub "${VpcStackNameParam}-PrivateDnsAcmCertificateId"
      DefaultActions: 
      - Type: "forward"
        TargetGroupArn: !Ref ProxyServerElbv2TargetGroup
      LoadBalancerArn: !Ref ProxyServerElbv2
      Port: 443
      Protocol: "HTTPS"
      SslPolicy: "ELBSecurityPolicy-2016-08"

# Outputs:

#   PrivateVpcSubnet3Id:
#     Description: "ID for PrivateVpcSubnet3"
#     Value: !Ref PrivateVpcSubnet3
#     Export:
#       Name: !Sub "${AWS::StackName}-PrivateVpcSubnet3"
