labs/lab3-non-kinesis-example/cloudformation/3300_proxy_server.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  This template creates the base VPC resources. Please note that there are a limit of 5 VPC's per region per AWS 
  account. Please refer to https://docs.aws.amazon.com/vpc/latest/userguide/amazon-vpc-limits.html for more 
  information regarding AWS VPC Limits. This template will also create a HTTP proxy in the public VPC for Internet 
  access. This is slightly cheaper than creating a NAT gateway stack.

# Metadata:
#   template metadata

Parameters:
  ProxyServerEc2AmiParam:
    Description: "Refer to https://aws.amazon.com/blogs/compute/query-for-the-latest-amazon-linux-ami-ids-using-aws-systems-manager-parameter-store/"
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  Ec2KeyPairKeyNameParam:
    Type: "AWS::EC2::KeyPair::KeyName"
    Description: "The EC2 Key Pair to allow SSH access to the instances"
  VpcStackNameParam:
    Type: String
    Description: "The name of the VPC stack, in order to import values"
  DnsStackNameParam:
    Type: String
    Description: "The name of the DNS stack, in order to import values"
  FirstTrustedInternetCiderParam:
    Type: String
    Description: "CIDR of a host or network from the Internet to trust for incoming traffic to the Public VPC"
    Default: "0.0.0.0/0"

# Rules:
#   set of rules

# Mappings:
#   set of mappings

# Conditions:
#   set of conditions

# Transform:
#   set of transforms

Resources:

#######################################################################################################################
###                                                                                                                 ###
###                                               COMMON EC2 RESOURCES                                              ###
###                                                                                                                 ###
#######################################################################################################################

  TrustedInternetHostsPrefixList:
    Type: AWS::EC2::PrefixList
    Properties: 
      AddressFamily: "IPv4"
      Entries: 
        - Cidr: !Ref FirstTrustedInternetCiderParam
          Description: "A IP address or network from the Internet we trust"
      MaxEntries: 10
      PrefixListName: "TrustedInternetHostsPrefixList"

  # InterVpcHostsPrefixList:
  #   Type: AWS::EC2::PrefixList
  #   Properties: 
  #     AddressFamily: "IPv4"
  #     Entries: 
  #       - Cidr: 
  #           Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
  #         Description: "Public VPC CIDR"
  #       - Cidr: 
  #           Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcCidrBlock"
  #         Description: "Private VPC CIDR"
  #     MaxEntries: 3
  #     PrefixListName: "InterVpcHostsPrefixList"

  Ec2InstanceSsmKmsKey:
    Type: AWS::KMS::Key
    Properties: 
      Description: "KMS Key that can be used for traffic encryption when using SSM to connect to EC2 Instances"
      Enabled: true
      EnableKeyRotation: true
      KeyPolicy:
        Version: "2012-10-17"
        Id: "KmsCustomPolicyForEc2Ssm"
        Statement:
          Sid: "Enable IAM policies"
          Effect: "Allow"
          Principal:
            AWS: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root"
          Action: "kms:*"
          Resource: "*"
      MultiRegion: false
      PendingWindowInDays: 7

  RootRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - 
            Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      Path: "/"

  ProxyServerInstanceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - "sts:AssumeRole"
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/AdministratorAccess"
      Path: /
      RoleName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - "ProxyServerInstanceRole"

  Ec2InstanceSsmPolicy:
    Type: AWS::IAM::Policy
    Properties: 
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Action:
          - ssm:UpdateInstanceInformation
          - ssmmessages:CreateControlChannel
          - ssmmessages:CreateDataChannel
          - ssmmessages:OpenControlChannel
          - ssmmessages:OpenDataChannel
          Resource: "*"
        - Effect: Allow
          Action:
          - s3:GetEncryptionConfiguration
          Resource: "*"
        - Effect: Allow
          Action:
          - kms:Decrypt
          Resource: !GetAtt Ec2InstanceSsmKmsKey.Arn
      PolicyName: "Ec2InstanceSsmPolicy"
      Roles:
      - !Ref RootRole
      - !Ref ProxyServerInstanceRole


#######################################################################################################################
###                                                                                                                 ###
###                                                 PROXY SERVER                                                    ###
###                                                                                                                 ###
#######################################################################################################################

  ProxyServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "Proxy Server Security Group"
      GroupName: 
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'InstanceSecurityGroup'
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"

  ProxyServerProxyIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: "Allow port 3128/tcp (HTTP_PROXY)"
      FromPort: 3128
      ToPort: 3128
      GroupId: !Ref ProxyServerSecurityGroup
      IpProtocol: tcp
      SourcePrefixListId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-InterVpcHostsPrefixListId"

  AllEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties: 
      Description: "Allow all outgoing traffic"
      GroupId: !Ref ProxyServerSecurityGroup
      IpProtocol: -1
      CidrIp: 0.0.0.0/0

  ProxyServerInstanceIamProfile:
    Type: AWS::IAM::InstanceProfile
    Properties: 
      InstanceProfileName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'ThisInstanceProfile'
      Path: "/"
      Roles: 
        - !Ref ProxyServerInstanceRole

  ProxyServerInstanceHostLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - 'LaunchTemplate'
      LaunchTemplateData:
        BlockDeviceMappings:
          - Ebs:
              VolumeSize: 8
              VolumeType: gp2
              DeleteOnTermination: true
              Encrypted: true
            DeviceName: /dev/sda1
        IamInstanceProfile:
          Arn: !GetAtt ProxyServerInstanceIamProfile.Arn
 
        ImageId: !Ref ProxyServerEc2AmiParam
        InstanceType: t3.medium
        KeyName: !Ref Ec2KeyPairKeyNameParam
        SecurityGroupIds:
        - !Ref ProxyServerSecurityGroup
        MetadataOptions:
          HttpTokens: required
        UserData: 
          Fn::Base64:
            Fn::Sub: 
            - |
              MIME-Version: 1.0
              Content-Type: multipart/mixed; boundary="==BOUNDARY=="

              --==BOUNDARY==
              Content-Type: text/x-shellscript; charset="us-ascii"

              #!/bin/bash
              yum install -y squid telnet bind-utils nmap-ncat nmap mc python3 python3-pip python3-setuptools git curl vim

              ip1="${PrivateVpcCidr}"
              ip2="${PublicVpcCidr}"
              ip1f=`echo $ip1 | awk -F\/ '{print $1}'`
              ip1fb=`echo $ip1 | awk -F\/ '{print $2}'`
              ip2f=`echo $ip2 | awk -F\/ '{print $1}'`
              ip2fb=`echo $ip2 | awk -F\/ '{print $2}'`
              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src XXX\/YYY/g' /etc/squid/squid.conf 
              sed -i -r "s/XXX/$ip1f/g" /etc/squid/squid.conf 
              sed -i -r "s/YYY/$ip1fb/g" /etc/squid/squid.conf 
              sed -i '0,/RFC1918 possible internal network/ s/RFC1918 possible internal network/&\nacl localnet src XXX\/YYY/g' /etc/squid/squid.conf 
              sed -i -r "s/XXX/$ip2f/g" /etc/squid/squid.conf 
              sed -i -r "s/YYY/$ip2fb/g" /etc/squid/squid.conf 

              systemctl enable squid.service
              systemctl start squid

              --==BOUNDARY==--
            - PrivateVpcCidr: 
                Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcCidrBlock"
              PublicVpcCidr: 
                Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
      TagSpecifications: 
      - ResourceType: "launch-template"
        Tags: 
          - Key: "Role"
            Value: "proxy-server"


  ProxyServerElbv2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      IpAddressType: "ipv4"
      Name: "ProxyServerElbv2TargetGroup"
      Port: 3128
      Protocol: "TCP"
      TargetType: "instance"
      UnhealthyThresholdCount: 3
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"

  ProxyServerAutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties: 
      AutoScalingGroupName: !Sub "${AWS::StackName}-ProxyServerASG"
      DesiredCapacity: "1"
      LaunchTemplate: 
        LaunchTemplateId: !Ref ProxyServerInstanceHostLaunchTemplate
        Version: !GetAtt ProxyServerInstanceHostLaunchTemplate.LatestVersionNumber
      MaxSize: "1"
      MinSize: "1"
      NewInstancesProtectedFromScaleIn: false
      VPCZoneIdentifier: 
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1Id"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2Id"
        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
      TargetGroupARNs: 
      - !Ref ProxyServerElbv2TargetGroup
      Tags: 
      - Key: "Name"
        Value: "internet-proxy"
        PropagateAtLaunch: true


  ProxyServerElbv2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "ProxyServerElbv2SecurityGroup"
      GroupDescription: "Enable Proxy Server access on the inbound port for ELB"
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourcePrefixListId: 
            Fn::ImportValue: !Sub "${VpcStackNameParam}-InterVpcHostsPrefixListId"
      Tags:
        - Key: Name
          Value: ProxyServerElbv2SecurityGroup

  ProxyServerElbv2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      IpAddressType: "ipv4"
      Name: "ProxyServerElbv2"
      Scheme: "internal"
      SubnetMappings: 
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1Id"
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2Id"
      - SubnetId:
          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
      Type: "network"
  
  ProxyServerElbv2Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions: 
      - Type: "forward"
        TargetGroupArn: !Ref ProxyServerElbv2TargetGroup
      LoadBalancerArn: !Ref ProxyServerElbv2
      Port: 8080
      Protocol: "TCP"

  ProxyServerDnsRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId : 
        Fn::ImportValue: !Sub "${DnsStackNameParam}-PrivateDnsZoneId"
      Name:
        Fn::Sub:
        - "proxy.${DomainName}"
        - DomainName:
            Fn::ImportValue: !Sub "${DnsStackNameParam}-PrivateDnsDomain"
      ResourceRecords:
      - !GetAtt ProxyServerElbv2.DNSName
      TTL: 300
      Type: "CNAME"

Outputs:

  Ec2InstanceSsmKmsKeyId:
    Description: "ID for Ec2InstanceSsmKmsKey"
    Value: !Ref Ec2InstanceSsmKmsKey
    Export:
      Name: !Sub "${AWS::StackName}-Ec2InstanceSsmKmsKeyId"

  Ec2InstanceSsmKmsKeyArn:
    Description: "ARN for Ec2InstanceSsmKmsKey"
    Value: !GetAtt Ec2InstanceSsmKmsKey.Arn
    Export:
      Name: !Sub "${AWS::StackName}-Ec2InstanceSsmKmsKeyArn"
